kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawel-flask-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: flask
